--- a/src/app/feature-modules/user/work-board/school-progress/school-progress.component.html
+++ b/src/app/feature-modules/user/work-board/school-progress/school-progress.component.html
@@ -19,9 +19,9 @@
       <div class="row">
         <div class="col">
           <div class="form-group">
-            <select class="form-control f" id="exampleFormControlSelect1">
-              <option>MID 1</option>
-              <option>MID 2</option>
+            <select class="form-control f" id="exampleFormControlSelect1" (change)="midChnage($event)">
+              <option value="1">MID 1</option>
+              <option value="2">MID 2</option>
               <option>MID 3</option>
               <option>MID 4</option>
               <option>MID 5</option>
