--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -361,3 +361,22 @@
     font-size: 23px;
   }
 }
+
+.t-i{
+  line-height: 30px;
+  i,p{
+    display: none;
+
+  }
+  .fa-eye{
+    display: block;
+  }
+
+}
+
+.z-c{
+  padding: 10px;
+  p{
+    color: #fff;
+  }
+}
