--- a/src/scss/_hahu.scss
+++ b/src/scss/_hahu.scss
@@ -202,7 +202,7 @@
         }
       }
     }
-    background-color: #fff;
+    //background-color: #fff;
     //padding-bottom: 17px;
     //content container
     .c-c {
@@ -222,7 +222,7 @@
     //
     .p-con-c {
       padding: 10px 0;
-      //background-color: $back-ground;
+      background-color: #fff;
       .t-a-r {
         color: #ababab;
         font-size: 18px;
