--- a/src/app/feature-modules/user/home-con/home-page/post/post.component.html
+++ b/src/app/feature-modules/user/home-con/home-page/post/post.component.html
@@ -1,6 +1,6 @@
-<div class="post">
+<div class="post" ngClass="{{post?.postMetaData[1].value}}">
 
-  <div class="cap-b" *ngIf="post?.content != null" (click)="toggleTags()">
+  <div class="cap-b" ngClass="{{post?.postMetaData[0].value}}"  *ngIf="post?.content != null" (click)="toggleTags()">
     <p>{{post?.content}}</p>
   </div>
 
@@ -12,7 +12,7 @@
     <!--style="background-image: url('./assets/images/background2.jpg'); height: 800px"-->
   </div>
 
-  <div class="p-t-c" *ngIf="showTags">
+  <div class="p-t-c" *ngIf="showTags" (click)="toggleTags()">
     <p *ngFor="let t of post?.tags">#{{t.name}}</p>
   </div>
 
