--- a/src/app/feature-modules/user/work-board/school-progress/school-progress.component.html
+++ b/src/app/feature-modules/user/work-board/school-progress/school-progress.component.html
@@ -16,39 +16,43 @@
 
   <div class="s-m-c">
     <div class="container">
-      <div class="row">
+      <form [formGroup]="progressFormGroup" class="row">
         <div class="col">
           <div class="form-group">
-            <select class="form-control f" id="exampleFormControlSelect1" (change)="midChnage($event)">
-              <option value="1">MID 1</option>
-              <option value="2">MID 2</option>
-              <option>MID 3</option>
-              <option>MID 4</option>
-              <option>MID 5</option>
+            <select class="form-control f"
+                    id="exampleFormControlSelect1"
+                    (change)="updateData()"
+                    formControlName="assesment">
+              <option value="{{a.id}}" *ngFor="let a of assesments">{{a.name}}</option>
+
             </select>
           </div>
         </div>
         <div class="col">
           <div class="form-group">
-            <select class="form-control s" id="2">
-              <option>Semester 1</option>
-              <option>Semester 2</option>
-              <option>Semester 3</option>
+            <select class="form-control s" id="2"
+                    formControlName="semester"
+                    (change)="updateData()">
+              <option *ngFor="let s of semesters  | keyvalue" value="{{s['value']}}">{{s['value']}}</option>
+
             </select>
           </div>
         </div>
         <div class="col">
           <div class="form-group">
-            <select class="form-control l" id="3">
-              <option>2021</option>
-              <option>2022</option>
-              <option>2023</option>
-              <option>2024</option>
-              <option>2025</option>
+            <select class="form-control l" id="3"
+                    formControlName="year"
+                    (change)="updateData()">
+              <option value="2020">2020</option>
+              <option value="2021">2021</option>
+              <option value="2022">2022</option>
+              <option value="2023">2023</option>
+              <option value="2024">2024</option>
+              <option value="2025">2025</option>
             </select>
           </div>
         </div>
-      </div>
+      </form>
     </div>
   </div>
 
@@ -56,7 +60,7 @@
 
     <div>
       <div class="a-r-c">
-        <p>74%  <span><small>cumulative average result</small></span></p>
+        <p *ngIf="showResult">{{acr}}% <span><small>cumulative average result</small></span></p>
       </div>
       <div style="display: block" class="p-r">
         <div class="l-c">
