--- a/src/scss/_workboard.scss
+++ b/src/scss/_workboard.scss
@@ -128,6 +128,7 @@
         opacity: 0.5;
         text-overflow: ellipsis;
         white-space: nowrap;
+        overflow: hidden;
       }
     }
   }
