--- a/src/app/feature-modules/user/profile/profile-setting/profile-setting.component.html
+++ b/src/app/feature-modules/user/profile/profile-setting/profile-setting.component.html
@@ -3,8 +3,8 @@
   <div class="n-c set-p-h">
 
     <div class="n-c-h ">
-      <div class="a-c">
-        <i class="fa fa-angle-left" routerLink="../"></i> <span class="set-h">Profile</span>
+      <div class="a-c" routerLink="../">
+        <i class="fa fa-angle-left" ></i> <span class="set-h">Profile</span>
         <!--<i class="fa fa-search float-right srch"></i>-->
 
       </div>
@@ -41,7 +41,7 @@
     <div class="t-con theme5"></div>
   </div>
   <div class="p-m-l">
-    <div class="ml">
+    <div class="ml" routerLink="../generalsetting">
       <p>General Setting</p>
       <small>Display, Notification, Sounds</small>
       <i class="fa fa-angle-right float-right"></i>
@@ -66,7 +66,7 @@
       <!--<small>Adjust the visibility of your content</small>-->
       <!--<i class="fa fa-angle-right float-right"></i>-->
     </div>
-    <div class="ml">
+    <div class="ml" routerLink="../editprofile">
       <p>Change user profile</p>
       <small>Profile info like page, gender profile picture</small>
       <i class="fa fa-angle-right float-right"></i>
