--- a/src/app/feature-modules/user/work-board/school-progress/school-progress.component.html
+++ b/src/app/feature-modules/user/work-board/school-progress/school-progress.component.html
@@ -71,7 +71,7 @@
                        [fullScreen]="false"
                        name="barChart"></ngx-spinner>
         </div>
-        <canvas baseChart
+        <canvas baseChart class="p-r"
                 [datasets]="barChartData"
                 [labels]="barChartLabels"
                 [options]="barChartOptions"
