**Modified edit profile

--- a/src/app/feature-modules/user/profile/edit-profile/edit-profile.component.html
+++ b/src/app/feature-modules/user/profile/edit-profile/edit-profile.component.html
@@ -1,4 +1,4 @@
-<div class="set-con">
+<div class="set-con ep">
   <div class="n-c set-p-h">
 
     <div class="n-c-h ">
@@ -51,12 +51,18 @@
           <br>
           <input type="text" placeholder="city" class="form-control form-control-sm a-f">
           <hr>
-          <textarea type="text" placeholder="city" class="form-control form-control-sm bio">An artist of considerable range, Jessica name taken by melbourne ...</textarea>
+          <textarea type="text" placeholder="city" class="form-control form-control-sm bio" rows="4">An artist of considerable range, Jessica name taken by melbourne ...</textarea>
 
 
         </div>
       </form>
+      <br>
     </div>
+  </div>
+
+  <div class="ep-b-c">
+    <div class="btn btn-secondary float-right" routerLink="../profilesetting">Cancel</div>
+    <div class="btn btn-success float-right">save</div>
   </div>
 
 
