--- a/src/app/feature-modules/user/profile/profile/profile.component.html
+++ b/src/app/feature-modules/user/profile/profile/profile.component.html
@@ -4,7 +4,7 @@
     <div class="n-c-h ">
       <div class="a-c">
         <span routerLink="../../../user">
-          <i class="fa fa-angle-left" ></i>
+          <i class="fa fa-angle-left"></i>
         <span class="pro-h">Profile</span>
         </span>
         <!--<i class="fa fa-search float-right srch"></i>-->
@@ -57,42 +57,42 @@
 
       </div>
     </div>
-    <div class="s-p-r-p">
-      <div class="container">
-        <div class="row">
-          <div class="col al-h-c al-h-p">
-            <p class="float-left l">Album</p>
-            <p class="float-right r">View All</p>
-          </div>
-        </div>
+    <!--<div class="s-p-r-p">-->
+    <!--<div class="container">-->
+    <!--<div class="row">-->
+    <!--<div class="col al-h-c al-h-p">-->
+    <!--<p class="float-left l">Album</p>-->
+    <!--<p class="float-right r">View All</p>-->
+    <!--</div>-->
+    <!--</div>-->
 
-      </div>
-      <div class="">
-        <div class="al-c w-100">
-          <div class="im bcimg" style="background-image: url('./assets/images/background.jpg')"></div>
-          <div class="im bcimg" style="background-image: url('./assets/images/background2.jpg')"></div>
-          <div class="im bcimg" style="background-image: url('./assets/images/background3.jpg')"></div>
-          <div class="im bcimg" style="background-image: url('./assets/images/profile.jpg')"></div>
-          <div class="im bcimg" style="background-image: url('./assets/images/profile2.jpg')"></div>
-          <div class="im bcimg" style="background-image: url('./assets/images/profile3.jpg')"></div>
-        </div>
-      </div>
-    </div>
+    <!--</div>-->
+    <!--<div class="">-->
+    <!--<div class="al-c w-100">-->
+    <!--&lt;!&ndash;<div class="im bcimg" *ngFor="let a of album"&ndash;&gt;-->
+    <!--&lt;!&ndash;[ngStyle]="{'background-image':'url( data:image/jpeg;base64,' + a?. + ')'}">&ndash;&gt;-->
+
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
 
   </div>
 </div>
 <div class="profile-c-c">
   <div class="p-c-c-h">
 
-    <div class="pm active">
+    <div class="pm" [ngClass]="{'active': isActive(1)}" (click)="changeTab(1)" routerLink="./posts">
       Posts
     </div>
-    <div class="pm">
+    <div class="pm" [ngClass]="{'active': isActive(2)}" (click)="changeTab(2)" routerLink="./likes">
       Likes
     </div>
-    <div class="pm">
+    <div class="pm" [ngClass]="{'active': isActive(3)}" (click)="changeTab(3)" routerLink="./following">
       Following
     </div>
+  </div>
+  <div>
+    <router-outlet></router-outlet>
   </div>
 </div>
 <br>
